--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -3,10 +3,12 @@ FROM base
 WORKDIR /app
 
 # Copier le code source
-COPY src/api/ ./app/
+COPY src/api/ ./
+
+ENV PYTHONPATH=/app
 
 # Exposer le port sur lequel l'API sera accessible
 EXPOSE 8000
 
 # Définir la commande de démarrage
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
