--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ jobs:
           docker build -f Dockerfile.base -t base .
 
       - name: Run tests inside Docker
-        run: docker run --rm -v ${{ github.workspace }}:/app -w /app base pytest src/
+        run: docker run --rm -v ${{ github.workspace }}:/app -w /app base pytest src/ airflow/
 
       - name: Check code quality inside Docker
-        run: docker run --rm -v ${{ github.workspace }}:/app -w /app base flake8 src/
+        run: docker run --rm -v ${{ github.workspace }}:/app -w /app base flake8 src/ airflow/
